dbs/kustomize/dbs/overlays/local/static-file-server/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-file-server
spec:
  tls:
  - hosts:
      - STATIC_FILE_SERVER_SERVICE_NAME.||DOMAIN||
    secretName: INGRESS_TLS_SECRET
  rules:
  - host: STATIC_FILE_SERVER_SERVICE_NAME.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: STATIC_FILE_SERVER_SERVICE_NAME
            port:
              name: http
